--- a/HTML-Assignments/Assignment 19/Wikipedia.html
+++ b/HTML-Assignments/Assignment 19/Wikipedia.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Dashrat</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, quia?</p>
 </body>
 </html>
