Html Ass-19 & C-patern printing Q

--- a/HTML-Assignments/Assignment 18/medialibrary.html
+++ b/HTML-Assignments/Assignment 18/medialibrary.html
@@ -57,40 +57,43 @@
 
 
     </section>
-<hr>
+    <hr>
     <section id="Audio">
         <h2>Audio</h2>
         <audio controls>
-            <source src="audio.mp3" type="audio/mp3">
+            <source src="https://res.cloudinary.com/dyp6zbyjd/video/upload/v1758003661/FLY_pf9z0v.mp3" type="audio/mp3">
         </audio>
         <p>Track 1 (Controls): A full featured track meant for focused and active listening.</p>
         <audio controls autoplay>
-            <source src="audio.mp3" type="audio/mp3">
+            <source src="https://res.cloudinary.com/dyp6zbyjd/video/upload/v1758003661/FLY_pf9z0v.mp3" type="audio/mp3">
         </audio>
         <p>Track 2 (Autoplay): A calming intro that starts playing automatically to set the mood.</p>
         <audio controls loop>
-            <source src="audio.mp3" type="audio/mp3">
+            <source src="https://res.cloudinary.com/dyp6zbyjd/video/upload/v1758003661/FLY_pf9z0v.mp3" type="audio/mp3">
         </audio>
         <p>Track 3 (Loop): A rhythmic groove that repeats endlessly for background energy.</p>
     </section>
     <br><br>
-<hr>
+    <hr>
     <section id="Video">
         <h2>Video</h2>
-        <video src="video2.mp4" controls width="400" loop poster="video-preview.jpg"></video>
+        <video src="https://res.cloudinary.com/dyp6zbyjd/video/upload/v1758001568/samples/elephants.mp4" controls
+            width="400" loop
+            poster="https://res.cloudinary.com/dyp6zbyjd/image/upload/v1758001572/samples/balloons.jpg"></video>
         <p>Video 1 (with captions): Demo video with poster image, fixed size, and subtitles for accessibility.</p>
         <br>
 
-        <video src="istockphoto-1257416380-640_adpp_is.mp4" controls muted autoplay height="230">
+        <video src="https://res.cloudinary.com/dyp6zbyjd/video/upload/v1758001568/samples/sea-turtle.mp4" controls muted
+            autoplay height="230">
             <track src="subtitles.vtt">
             </track>
         </video>
         <p>Video 2: Showcase video with poster preview and set dimensions, controlled by the user.</p>
     </section><br><br>
-<hr>
+    <hr>
     <section id="Embeds">
         <H2>Embed</H2>
-        
+
         <h5>youtube</h5>
         <iframe width="460" height="215" src="https://www.youtube.com/embed/6nkNbZhOim4?si=croAfeOWU6JZRJT7"
             title="YouTube video player" frameborder="0"
@@ -105,9 +108,9 @@
 
 
         <br><br>
-        
+
         <h5>Wikipedia</h5><br>
-       <iframe width="460" height="215" src="https://en.wikipedia.org/wiki/History_of_Rajasthan"
+        <iframe width="460" height="215" src="https://en.wikipedia.org/wiki/History_of_Rajasthan"
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
