All 20days changes with clone websits

--- a/CSS/Level-2/assignment04/ludo.html
+++ b/CSS/Level-2/assignment04/ludo.html
@@ -9,7 +9,12 @@
 <body>
     <div class="main">
         <div class="red">
-
+            <div class="White">
+                <div class="Rc"></div>
+                <div class="Rc"></div>
+                <div class="Rc"></div>
+                <div class="Rc"></div>
+            </div>
         </div>
 
         <div class="greenbox">
@@ -18,8 +23,8 @@
             <div class="GB1"></div>
             <div class="GB1"></div>
             <div class="GB1-g"></div>
-            <div class="GB1-s"><font size="7">★</font></div>
-            <div class="GB1-s"></div>
+            <div class="GB1-s"><font size="6">★</font></div>
+            <div class="GB1-s"><font size="6">★</font></div>
             <div class="GB1-g"></div>
             <div class="GB1"></div>
             <div class="GB1"></div>
@@ -34,25 +39,30 @@
         </div>
 
         <div class="green">
-
+            <div class="White">
+                <div class="Gc"></div>
+                <div class="Gc"></div>
+                <div class="Gc"></div>
+                <div class="Gc"></div>
+            </div>
         </div>
 
         <div class="redbox">
             <div class="RB1"></div>
+            <div class="RB1-s"><font size="6">★</font></div>
             <div class="RB1"></div>
             <div class="RB1"></div>
             <div class="RB1"></div>
             <div class="RB1"></div>
             <div class="RB1"></div>
+            <div class="RB1-r"></div>
+            <div class="RB1-r"></div>
+            <div class="RB1-r"></div>
+            <div class="RB1-r"></div>
+            <div class="RB1-r"></div>
             <div class="RB1"></div>
             <div class="RB1"></div>
-            <div class="RB1"></div>
-            <div class="RB1"></div>
-            <div class="RB1"></div>
-            <div class="RB1"></div>
-            <div class="RB1"></div>
-            <div class="RB1"></div>
-            <div class="RB1"></div>
+            <div class="RB1-s"><font size="6">★</font></div>
             <div class="RB1"></div>
             <div class="RB1"></div>
             <div class="RB1"></div>
@@ -64,42 +74,47 @@
             <div class="YB1"></div>
             <div class="YB1"></div>
             <div class="YB1"></div>
+            <div class="YB1-s"><font size="6">★</font></div>
+            <div class="YB1"></div>
+            <div class="YB1"></div>
+            <div class="YB1-y"></div>
+            <div class="YB1-y"></div>
+            <div class="YB1-y"></div>
+            <div class="YB1-y"></div>
+            <div class="YB1-y"></div>
             <div class="YB1"></div>
             <div class="YB1"></div>
             <div class="YB1"></div>
             <div class="YB1"></div>
             <div class="YB1"></div>
-            <div class="YB1"></div>
-            <div class="YB1"></div>
-            <div class="YB1"></div>
-            <div class="YB1"></div>
-            <div class="YB1"></div>
-            <div class="YB1"></div>
-            <div class="YB1"></div>
-            <div class="YB1"></div>
-            <div class="YB1"></div>
+            <div class="YB1-s"><font size="6">★</font></div>
             <div class="YB1"></div>
         </div>
 
          <div class="blue">
-
+            <div class="White">
+                <div class="Bc"></div>
+                <div class="Bc"></div>
+                <div class="Bc"></div>
+                <div class="Bc"></div>
+            </div>
         </div>
 
         <div class="bluebox">
             <div class="BB1"></div>
+            <div class="BB1-b"></div>
             <div class="BB1"></div>
             <div class="BB1"></div>
+            <div class="BB1-b"></div>
             <div class="BB1"></div>
             <div class="BB1"></div>
+            <div class="BB1-b"></div>
             <div class="BB1"></div>
             <div class="BB1"></div>
-            <div class="BB1"></div>
-            <div class="BB1"></div>
-            <div class="BB1"></div>
-            <div class="BB1"></div>
-            <div class="BB1"></div>
-            <div class="BB1"></div>
-            <div class="BB1"></div>
+            <div class="BB1-b"></div>
+            <div class="BB1-s"><font size="6">★</font></div>
+            <div class="BB1-s"><font size="6">★</font></div>
+            <div class="BB1-b"></div>
             <div class="BB1"></div>
             <div class="BB1"></div>
             <div class="BB1"></div>
@@ -107,7 +122,12 @@
         </div>
 
         <div class="yellow">
-
+            <div class="White">
+                <div class="Yc"></div>
+                <div class="Yc"></div>
+                <div class="Yc"></div>
+                <div class="Yc"></div>
+            </div>
         </div>
 
     </div>
